Resolvido o problema do EntityManager não encontrar a unidade de persistência.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=true
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -37,6 +38,7 @@ file.reference.jstl-api.jar=lib\\jstl-api.jar
 file.reference.jstl-impl.jar=lib\\jstl-impl.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar=lib\\org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar
 file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar=lib\\org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar
+file.reference.postgresql-9.1-901-1.jdbc4.jar=lib\\postgresql-9.1-901-1.jdbc4.jar
 file.reference.primefaces-4.0.jar=lib\\primefaces-4.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -55,13 +57,16 @@ javac.classpath=\
     ${file.reference.jstl-impl.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar}:\
-    ${file.reference.primefaces-4.0.jar}
+    ${file.reference.primefaces-4.0.jar}:\
+    ${libs.eclipselink.classpath}:\
+    ${file.reference.postgresql-9.1-901-1.jdbc4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=\
-    ${javac.classpath}
+    ${javac.classpath}:\
+    ${libs.eclipselinkmodelgen.classpath}
 javac.source=1.6
 javac.target=1.6
 javac.test.classpath=\
