--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,7 @@
 deploy.ant.properties.file=C:\\Users\\Felipe\\AppData\\Roaming\\NetBeans\\8.0\\tomcat70.properties
 j2ee.server.home=C:/Program Files/Apache Software Foundation/apache-tomcat-7.0.53
 j2ee.server.instance=tomcat70:home=C:\\Program Files\\Apache Software Foundation\\apache-tomcat-7.0.53
+javac.debug=true
+javadoc.preview=true
+selected.browser=default
 user.properties.file=C:\\Users\\Felipe\\AppData\\Roaming\\NetBeans\\8.0\\build.properties
