--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,7 @@ endorsed.classpath=\
 excludes=
 file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
 file.reference.eclipselink.jar=lib\\eclipselink.jar
+file.reference.hot-sneaks-1.0.10.jar=lib\\hot-sneaks-1.0.10.jar
 file.reference.javax.faces.jar=lib\\javax.faces.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.jstl-api.jar=lib\\jstl-api.jar
@@ -57,9 +58,10 @@ javac.classpath=\
     ${file.reference.jstl-impl.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar}:\
-    ${file.reference.primefaces-4.0.jar}:\
     ${libs.eclipselink.classpath}:\
-    ${file.reference.postgresql-9.1-901-1.jdbc4.jar}
+    ${file.reference.postgresql-9.1-901-1.jdbc4.jar}:\
+    ${file.reference.hot-sneaks-1.0.10.jar}:\
+    ${file.reference.primefaces-4.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -87,7 +89,6 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 resource.dir=setup
