--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,6 +30,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
 file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
 file.reference.eclipselink.jar=lib\\eclipselink.jar
 file.reference.hot-sneaks-1.0.10.jar=lib\\hot-sneaks-1.0.10.jar
@@ -37,6 +38,7 @@ file.reference.javax.faces.jar=lib\\javax.faces.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.jstl-api.jar=lib\\jstl-api.jar
 file.reference.jstl-impl.jar=lib\\jstl-impl.jar
+file.reference.mail-1.4.7.jar=lib\\mail-1.4.7.jar
 file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar=lib\\org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar
 file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar=lib\\org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar
 file.reference.postgresql-9.1-901-1.jdbc4.jar=lib\\postgresql-9.1-901-1.jdbc4.jar
@@ -61,7 +63,9 @@ javac.classpath=\
     ${libs.eclipselink.classpath}:\
     ${file.reference.postgresql-9.1-901-1.jdbc4.jar}:\
     ${file.reference.hot-sneaks-1.0.10.jar}:\
-    ${file.reference.primefaces-4.0.jar}
+    ${file.reference.primefaces-4.0.jar}:\
+    ${file.reference.activation-1.1.1.jar}:\
+    ${file.reference.mail-1.4.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
