--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,6 +32,8 @@ endorsed.classpath=\
 excludes=
 file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
 file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
+file.reference.commons-logging-1.1.3.jar=lib\\commons-logging-1.1.3.jar
+file.reference.dwr.jar=lib\\dwr.jar
 file.reference.eclipselink.jar=lib\\eclipselink.jar
 file.reference.hot-sneaks-1.0.10.jar=lib\\hot-sneaks-1.0.10.jar
 file.reference.javax.faces.jar=lib\\javax.faces.jar
@@ -65,7 +67,9 @@ javac.classpath=\
     ${file.reference.hot-sneaks-1.0.10.jar}:\
     ${file.reference.primefaces-4.0.jar}:\
     ${file.reference.activation-1.1.1.jar}:\
-    ${file.reference.mail-1.4.7.jar}
+    ${file.reference.mail-1.4.7.jar}:\
+    ${file.reference.dwr.jar}:\
+    ${file.reference.commons-logging-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
