--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,24 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
 file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
+file.reference.commons-beanutils-1.8.0.jar=lib\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=lib\\commons-collections-2.1.1.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
 file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
+file.reference.commons-javaflow-20060411.jar=lib\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
 file.reference.commons-logging-1.1.3.jar=lib\\commons-logging-1.1.3.jar
-file.reference.dwr.jar=lib\\dwr.jar
 file.reference.eclipselink.jar=lib\\eclipselink.jar
+file.reference.groovy-all-1.7.5.jar=lib\\groovy-all-1.7.5.jar
 file.reference.hot-sneaks-1.0.10.jar=lib\\hot-sneaks-1.0.10.jar
+file.reference.iText-2.1.7.jar=lib\\iText-2.1.7.jar
+file.reference.jasperreports-4.6.0.jar=lib\\jasperreports-4.6.0.jar
+file.reference.jasperreports-applet-4.6.0.jar=lib\\jasperreports-applet-4.6.0.jar
+file.reference.jasperreports-fonts-4.6.0.jar=lib\\jasperreports-fonts-4.6.0.jar
+file.reference.jasperreports-javaflow-4.6.0.jar=lib\\jasperreports-javaflow-4.6.0.jar
 file.reference.javax.faces.jar=lib\\javax.faces.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
+file.reference.jdt-compiler-3.1.1.jar=lib\\jdt-compiler-3.1.1.jar
 file.reference.jstl-api.jar=lib\\jstl-api.jar
 file.reference.jstl-impl.jar=lib\\jstl-impl.jar
 file.reference.mail-1.4.7.jar=lib\\mail-1.4.7.jar
@@ -68,8 +79,19 @@ javac.classpath=\
     ${file.reference.primefaces-4.0.jar}:\
     ${file.reference.activation-1.1.1.jar}:\
     ${file.reference.mail-1.4.7.jar}:\
-    ${file.reference.dwr.jar}:\
-    ${file.reference.commons-logging-1.1.3.jar}
+    ${file.reference.commons-logging-1.1.3.jar}:\
+    ${file.reference.commons-beanutils-1.8.0.jar}:\
+    ${file.reference.commons-collections-2.1.1.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.1.jar}:\
+    ${file.reference.groovy-all-1.7.5.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-4.6.0.jar}:\
+    ${file.reference.jasperreports-applet-4.6.0.jar}:\
+    ${file.reference.jasperreports-fonts-4.6.0.jar}:\
+    ${file.reference.jasperreports-javaflow-4.6.0.jar}:\
+    ${file.reference.jdt-compiler-3.1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
