--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,22 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+    
     <context-param>
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
+    
     <context-param>
         <param-name>primefaces.THEME</param-name>
         <param-value>hot-sneaks</param-value>
     </context-param>
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
+    <filter>
+        <filter-name>FiltroAcessoSistema</filter-name>
+        <filter-class>web.filter.FiltroAcessoSistema</filter-class>
+    </filter>  
+    <filter-mapping>
+        <filter-name>FiltroAcessoSistema</filter-name>
+        <url-pattern>/sistema/*</url-pattern>
+    </filter-mapping>
+    
     <session-config>
         <session-timeout>
             30
@@ -25,20 +38,4 @@
     <welcome-file-list>
         <welcome-file>index.jsf</welcome-file>
     </welcome-file-list>
-    
-    <servlet>
-        <display-name>DWR Servlet</display-name>
-        <servlet-name>dwr-invoker</servlet-name>  
-        <servlet-class>org.directwebremoting.servlet.DwrServlet</servlet-class>
-        <init-param>
-            <param-name>debug</param-name>
-            <param-value>true</param-value>
-        </init-param>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>dwr-invoker</servlet-name>
-        <url-pattern>/dwr/*</url-pattern>
-    </servlet-mapping>
-
 </web-app>
