--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,7 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -46,6 +46,7 @@ file.reference.jasperreports-4.6.0.jar=lib\\jasperreports-4.6.0.jar
 file.reference.jasperreports-applet-4.6.0.jar=lib\\jasperreports-applet-4.6.0.jar
 file.reference.jasperreports-fonts-4.6.0.jar=lib\\jasperreports-fonts-4.6.0.jar
 file.reference.jasperreports-javaflow-4.6.0.jar=lib\\jasperreports-javaflow-4.6.0.jar
+file.reference.javaee-api-7.0.jar=lib\\javaee-api-7.0.jar
 file.reference.javax.faces.jar=lib\\javax.faces.jar
 file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.jdt-compiler-3.1.1.jar=lib\\jdt-compiler-3.1.1.jar
@@ -60,7 +61,7 @@ includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
 j2ee.deploy.on.save=true
-j2ee.platform=1.6-web
+j2ee.platform=1.7-web
 j2ee.platform.classpath=${j2ee.server.home}/lib/annotations-api.jar:${j2ee.server.home}/lib/catalina-ant.jar:${j2ee.server.home}/lib/catalina-ha.jar:${j2ee.server.home}/lib/catalina-storeconfig.jar:${j2ee.server.home}/lib/catalina-tribes.jar:${j2ee.server.home}/lib/catalina.jar:${j2ee.server.home}/lib/ecj-P20140317-1600.jar:${j2ee.server.home}/lib/el-api.jar:${j2ee.server.home}/lib/jasper-el.jar:${j2ee.server.home}/lib/jasper.jar:${j2ee.server.home}/lib/jsp-api.jar:${j2ee.server.home}/lib/servlet-api.jar:${j2ee.server.home}/lib/tomcat-api.jar:${j2ee.server.home}/lib/tomcat-coyote.jar:${j2ee.server.home}/lib/tomcat-dbcp.jar:${j2ee.server.home}/lib/tomcat-i18n-es.jar:${j2ee.server.home}/lib/tomcat-i18n-fr.jar:${j2ee.server.home}/lib/tomcat-i18n-ja.jar:${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.home}/lib/tomcat-jni.jar:${j2ee.server.home}/lib/tomcat-spdy.jar:${j2ee.server.home}/lib/tomcat-util-scan.jar:${j2ee.server.home}/lib/tomcat-util.jar:${j2ee.server.home}/lib/tomcat-websocket.jar:${j2ee.server.home}/lib/websocket-api.jar
 j2ee.server.type=Tomcat
 jar.compress=false
@@ -91,7 +92,8 @@ javac.classpath=\
     ${file.reference.jasperreports-applet-4.6.0.jar}:\
     ${file.reference.jasperreports-fonts-4.6.0.jar}:\
     ${file.reference.jasperreports-javaflow-4.6.0.jar}:\
-    ${file.reference.jdt-compiler-3.1.1.jar}
+    ${file.reference.jdt-compiler-3.1.1.jar}:\
+    ${file.reference.javaee-api-7.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
