--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,4 +1,34 @@
 deploy.ant.properties.file=C:\\Users\\Felipe\\AppData\\Roaming\\NetBeans\\8.0\\tomcat80.properties
+file.reference.activation-1.1.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\activation-1.1.1.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\commons-collections-2.1.1.jar
+file.reference.commons-digester-2.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\commons-digester-2.1.jar
+file.reference.commons-fileupload-1.3.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\commons-fileupload-1.3.1.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.3.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\commons-logging-1.1.3.jar
+file.reference.eclipselink.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\eclipselink.jar
+file.reference.groovy-all-1.7.5.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\groovy-all-1.7.5.jar
+file.reference.hot-sneaks-1.0.10.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\hot-sneaks-1.0.10.jar
+file.reference.iText-2.1.7.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\iText-2.1.7.jar
+file.reference.jackson-core-asl-1.9.3.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jackson-core-asl-1.9.3.jar
+file.reference.jackson-mapper-asl-1.9.3.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jackson-mapper-asl-1.9.3.jar
+file.reference.jasperreports-4.6.0.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jasperreports-4.6.0.jar
+file.reference.jasperreports-applet-4.6.0.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jasperreports-applet-4.6.0.jar
+file.reference.jasperreports-fonts-4.6.0.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jasperreports-fonts-4.6.0.jar
+file.reference.jasperreports-javaflow-4.6.0.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jasperreports-javaflow-4.6.0.jar
+file.reference.javax.faces.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\javax.faces.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\javax.persistence_2.1.0.v201304241213.jar
+file.reference.jdt-compiler-3.1.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jdt-compiler-3.1.1.jar
+file.reference.jstl-api.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jstl-api.jar
+file.reference.jstl-impl.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\jstl-impl.jar
+file.reference.mail-1.4.7.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\mail-1.4.7.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar
+file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar
+file.reference.postgresql-9.1-901-1.jdbc4.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\postgresql-9.1-901-1.jdbc4.jar
+file.reference.primefaces-4.0.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\primefaces-4.0.jar
+file.reference.slf4j-api-1.6.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\slf4j-api-1.6.1.jar
+file.reference.slf4j-simple-1.6.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\Intedisciplinar\\lib\\slf4j-simple-1.6.1.jar
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Users/Felipe/AppData/Roaming/NetBeans/8.0/config/GF_4.0/domain1
 j2ee.server.home=C:/Program Files/Apache Software Foundation/apache-tomcat-8.0.8
