--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,33 +30,37 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.activation-1.1.1.jar=lib\\activation-1.1.1.jar
-file.reference.commons-beanutils-1.8.0.jar=lib\\commons-beanutils-1.8.0.jar
-file.reference.commons-collections-2.1.1.jar=lib\\commons-collections-2.1.1.jar
-file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
-file.reference.commons-fileupload-1.3.1.jar=lib\\commons-fileupload-1.3.1.jar
-file.reference.commons-javaflow-20060411.jar=lib\\commons-javaflow-20060411.jar
-file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
-file.reference.commons-logging-1.1.3.jar=lib\\commons-logging-1.1.3.jar
-file.reference.eclipselink.jar=lib\\eclipselink.jar
-file.reference.groovy-all-1.7.5.jar=lib\\groovy-all-1.7.5.jar
-file.reference.hot-sneaks-1.0.10.jar=lib\\hot-sneaks-1.0.10.jar
-file.reference.iText-2.1.7.jar=lib\\iText-2.1.7.jar
-file.reference.jasperreports-4.6.0.jar=lib\\jasperreports-4.6.0.jar
-file.reference.jasperreports-applet-4.6.0.jar=lib\\jasperreports-applet-4.6.0.jar
-file.reference.jasperreports-fonts-4.6.0.jar=lib\\jasperreports-fonts-4.6.0.jar
-file.reference.jasperreports-javaflow-4.6.0.jar=lib\\jasperreports-javaflow-4.6.0.jar
-file.reference.javaee-api-7.0.jar=lib\\javaee-api-7.0.jar
-file.reference.javax.faces.jar=lib\\javax.faces.jar
-file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
-file.reference.jdt-compiler-3.1.1.jar=lib\\jdt-compiler-3.1.1.jar
-file.reference.jstl-api.jar=lib\\jstl-api.jar
-file.reference.jstl-impl.jar=lib\\jstl-impl.jar
-file.reference.mail-1.4.7.jar=lib\\mail-1.4.7.jar
-file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar=lib\\org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar
-file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar=lib\\org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar
-file.reference.postgresql-9.1-901-1.jdbc4.jar=lib\\postgresql-9.1-901-1.jdbc4.jar
-file.reference.primefaces-4.0.jar=lib\\primefaces-4.0.jar
+file.reference.activation-1.1.1.jar=lib/activation-1.1.1.jar
+file.reference.atmosphere-runtime-2.1.5.jar=lib\\atmosphere-runtime-2.1.5.jar
+file.reference.commons-beanutils-1.8.0.jar=lib/commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=lib/commons-collections-2.1.1.jar
+file.reference.commons-digester-2.1.jar=lib/commons-digester-2.1.jar
+file.reference.commons-fileupload-1.3.1.jar=lib/commons-fileupload-1.3.1.jar
+file.reference.commons-javaflow-20060411.jar=lib/commons-javaflow-20060411.jar
+file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
+file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
+file.reference.eclipselink.jar=lib/eclipselink.jar
+file.reference.groovy-all-1.7.5.jar=lib/groovy-all-1.7.5.jar
+file.reference.hot-sneaks-1.0.10.jar=lib/hot-sneaks-1.0.10.jar
+file.reference.iText-2.1.7.jar=lib/iText-2.1.7.jar
+file.reference.jackson-core-asl-1.9.3.jar=lib/jackson-core-asl-1.9.3.jar
+file.reference.jackson-mapper-asl-1.9.3.jar=lib/jackson-mapper-asl-1.9.3.jar
+file.reference.jasperreports-4.6.0.jar=lib/jasperreports-4.6.0.jar
+file.reference.jasperreports-applet-4.6.0.jar=lib/jasperreports-applet-4.6.0.jar
+file.reference.jasperreports-fonts-4.6.0.jar=lib/jasperreports-fonts-4.6.0.jar
+file.reference.jasperreports-javaflow-4.6.0.jar=lib/jasperreports-javaflow-4.6.0.jar
+file.reference.javax.faces.jar=lib/javax.faces.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=lib/javax.persistence_2.1.0.v201304241213.jar
+file.reference.jdt-compiler-3.1.1.jar=lib/jdt-compiler-3.1.1.jar
+file.reference.jstl-api.jar=lib/jstl-api.jar
+file.reference.jstl-impl.jar=lib/jstl-impl.jar
+file.reference.mail-1.4.7.jar=lib/mail-1.4.7.jar
+file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar=lib/org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar
+file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar=lib/org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar
+file.reference.postgresql-9.1-901-1.jdbc4.jar=lib/postgresql-9.1-901-1.jdbc4.jar
+file.reference.primefaces-4.0.jar=lib/primefaces-4.0.jar
+file.reference.slf4j-api-1.6.1.jar=lib/slf4j-api-1.6.1.jar
+file.reference.slf4j-simple-1.6.1.jar=lib/slf4j-simple-1.6.1.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -93,7 +97,11 @@ javac.classpath=\
     ${file.reference.jasperreports-fonts-4.6.0.jar}:\
     ${file.reference.jasperreports-javaflow-4.6.0.jar}:\
     ${file.reference.jdt-compiler-3.1.1.jar}:\
-    ${file.reference.javaee-api-7.0.jar}
+    ${file.reference.slf4j-api-1.6.1.jar}:\
+    ${file.reference.slf4j-simple-1.6.1.jar}:\
+    ${file.reference.jackson-core-asl-1.9.3.jar}:\
+    ${file.reference.jackson-mapper-asl-1.9.3.jar}:\
+    ${file.reference.atmosphere-runtime-2.1.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -136,6 +144,6 @@ src.dir=${source.root}/java
 test.src.dir=test
 war.content.additional=
 war.ear.name=${war.name}
-war.name=Intedisciplinar.war
+war.name=Interdisciplinar.war
 web.docbase.dir=web
 webinf.dir=web/WEB-INF
