--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -21,21 +21,34 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
     </servlet-mapping>
-    <filter>
-        <filter-name>FiltroAcessoSistema</filter-name>
-        <filter-class>web.filter.FiltroAcessoSistema</filter-class>
-    </filter>  
-    <filter-mapping>
-        <filter-name>FiltroAcessoSistema</filter-name>
-        <url-pattern>/sistema/*</url-pattern>
-    </filter-mapping>
+    <servlet>
+        <description>AtmosphereServlet</description>
+        <servlet-name>AtmosphereServlet</servlet-name>
+        <servlet-class>org.atmosphere.cpr.AtmosphereServlet</servlet-class>
+        <async-supported>true</async-supported>
+        <!-- Use it with mvn jetty:run -->
+        <init-param>
+            <param-name>org.atmosphere.cpr.packages</param-name>
+            <param-value>org.atmosphere.samples</param-value>
+            <param-name>org.atmosphere.useNative</param-name>
+            <param-value>false</param-value>
+        </init-param>
+        <load-on-startup>0</load-on-startup>
+    </servlet>
+    
+    <servlet-mapping>
+        <servlet-name>AtmosphereServlet</servlet-name>
+        <url-pattern>/chat/*</url-pattern>
+    </servlet-mapping>    
     
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
+    
     <welcome-file-list>
         <welcome-file>index.jsf</welcome-file>
     </welcome-file-list>
+    
 </web-app>
