--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -32,6 +32,8 @@
             <param-value>org.atmosphere.samples</param-value>
             <param-name>org.atmosphere.useNative</param-name>
             <param-value>false</param-value>
+            <param-name>org.atmosphere.cpr.sessionSupport</param-name>
+            <param-value>true</param-value>
         </init-param>
         <load-on-startup>0</load-on-startup>
     </servlet>
@@ -39,6 +41,7 @@
     <servlet-mapping>
         <servlet-name>AtmosphereServlet</servlet-name>
         <url-pattern>/chat/*</url-pattern>
+        <url-pattern>/jogo/*</url-pattern>
     </servlet-mapping>    
     
     <session-config>
