--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,7 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=JSP
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_language=Facelets
+auxiliary.org-netbeans-modules-projectapi.jsf_2e_present=true
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -39,7 +40,7 @@ file.reference.commons-fileupload-1.3.1.jar=lib/commons-fileupload-1.3.1.jar
 file.reference.commons-javaflow-20060411.jar=lib/commons-javaflow-20060411.jar
 file.reference.commons-logging-1.1.1.jar=lib/commons-logging-1.1.1.jar
 file.reference.commons-logging-1.1.3.jar=lib/commons-logging-1.1.3.jar
-file.reference.eclipselink.jar=lib/eclipselink.jar
+file.reference.eclipselink.jar=lib\\eclipselink.jar
 file.reference.groovy-all-1.7.5.jar=lib/groovy-all-1.7.5.jar
 file.reference.hot-sneaks-1.0.10.jar=lib/hot-sneaks-1.0.10.jar
 file.reference.iText-2.1.7.jar=lib/iText-2.1.7.jar
@@ -50,7 +51,7 @@ file.reference.jasperreports-applet-4.6.0.jar=lib/jasperreports-applet-4.6.0.jar
 file.reference.jasperreports-fonts-4.6.0.jar=lib/jasperreports-fonts-4.6.0.jar
 file.reference.jasperreports-javaflow-4.6.0.jar=lib/jasperreports-javaflow-4.6.0.jar
 file.reference.javax.faces.jar=lib/javax.faces.jar
-file.reference.javax.persistence_2.1.0.v201304241213.jar=lib/javax.persistence_2.1.0.v201304241213.jar
+file.reference.javax.persistence_2.1.0.v201304241213.jar=lib\\javax.persistence_2.1.0.v201304241213.jar
 file.reference.jdt-compiler-3.1.1.jar=lib/jdt-compiler-3.1.1.jar
 file.reference.jstl-api.jar=lib/jstl-api.jar
 file.reference.jstl-impl.jar=lib/jstl-impl.jar
@@ -73,12 +74,10 @@ javac.classpath=\
     ${file.reference.commons-fileupload-1.3.1.jar}:\
     ${file.reference.eclipselink.jar}:\
     ${file.reference.javax.faces.jar}:\
-    ${file.reference.javax.persistence_2.1.0.v201304241213.jar}:\
     ${file.reference.jstl-api.jar}:\
     ${file.reference.jstl-impl.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.jpql_2.5.1.v20130918-f2b9fc5.jar}:\
     ${file.reference.org.eclipse.persistence.jpa.modelgen_2.5.1.v20130918-f2b9fc5.jar}:\
-    ${libs.eclipselink.classpath}:\
     ${file.reference.postgresql-9.1-901-1.jdbc4.jar}:\
     ${file.reference.hot-sneaks-1.0.10.jar}:\
     ${file.reference.primefaces-4.0.jar}:\
@@ -101,7 +100,9 @@ javac.classpath=\
     ${file.reference.slf4j-simple-1.6.1.jar}:\
     ${file.reference.jackson-core-asl-1.9.3.jar}:\
     ${file.reference.jackson-mapper-asl-1.9.3.jar}:\
-    ${file.reference.atmosphere-runtime-2.1.5.jar}
+    ${file.reference.atmosphere-runtime-2.1.5.jar}:\
+    ${file.reference.eclipselink.jar}:\
+    ${file.reference.javax.persistence_2.1.0.v201304241213.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
